[package]
name = "kensa"
version = "0.1.1"
edition = "2024"
authors = ["Travis Wagner <dev@techsavvytravvy.com>"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
opencv = { version = "0.98", features = ["imgcodecs", "imgproc", "videoio"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
